[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Soldier.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemies/teste/sprites/Gunner_Black_Death.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/teste/die.tres" type="Animation" id=3]
[ext_resource path="res://assets/Enemies/teste/walk.tres" type="Animation" id=4]
[ext_resource path="res://assets/Enemies/teste/idle.tres" type="Animation" id=5]
[ext_resource path="res://scenes/hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.0571, 10 )

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[node name="Inimigo" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.445442, 2.78405 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 1.01244, -0.964287 )
texture = ExtResource( 2 )
hframes = 8

[node name="anim" type="AnimationPlayer" parent="KinematicBody2D"]
autoplay = "Walk"
anims/Die = ExtResource( 3 )
anims/Idle = ExtResource( 5 )
anims/Walk = ExtResource( 4 )
anims/dead = SubResource( 2 )

[node name="ray_wall" type="RayCast2D" parent="KinematicBody2D"]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="hitbox" parent="KinematicBody2D" instance=ExtResource( 6 )]
position = Vector2( 0.445446, -16.6591 )
scale = Vector2( 0.9, 1.5 )
[connection signal="animation_finished" from="KinematicBody2D/anim" to="KinematicBody2D" method="_on_anim_animation_finished"]
[connection signal="body_entered" from="KinematicBody2D/hitbox" to="KinematicBody2D" method="_on_hitbox_body_entered"]

[editable path="KinematicBody2D/hitbox"]
